Fixed overflowing text on chrome extension

--- a/chrome-extension/css/default.less
+++ b/chrome-extension/css/default.less
@@ -88,6 +88,9 @@ body {
 
 .list-group-item {
 	padding: 5px 5px !important;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 
 .list-group-item:first-child {
